updated jenkinsfile